<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_300"
    android:layout_height="@dimen/dp_300"
    xmlns:app="http://schemas.android.com/apk/res-auto">
   <android.support.v7.widget.CardView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.ldx.mygraduationproject.view.LineChartViewForWeight
            android:id="@+id/LineChartViewForWeight"
            android:layout_width="@dimen/dp_250"
            android:layout_height="@dimen/dp_250"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/weight_text"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:lineColor="@color/green"
            app:textColor="@color/gray_2"
            app:textSize="@dimen/dp_12" />

        <ImageView
            android:id="@+id/weight_image"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_alignLeft="@+id/LineChartView"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/LineChartView"
            android:layout_marginLeft="@dimen/dp_11"
            android:layout_marginStart="@dimen/dp_11"
            app:srcCompat="@drawable/running" />

        <TextView
            android:id="@+id/weight_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/weight_image"
            android:layout_marginLeft="@dimen/dp_14"
            android:layout_marginStart="@dimen/dp_14"
            android:layout_toEndOf="@+id/weight_image"
            android:layout_toRightOf="@+id/weight_image"
            android:text="@string/weight" />

        <TextView
            android:id="@+id/max_weight_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/max_weight_image"
            android:layout_toRightOf="@+id/max_weight_image"
            android:text="@string/max_step" />

        <ImageView
            android:id="@+id/max_weight_image"
            android:layout_width="@dimen/dp_10"
            android:layout_height="@dimen/dp_10"
            android:layout_alignLeft="@+id/weight_image"
            android:layout_alignStart="@+id/weight_image"
            android:layout_alignTop="@+id/max_weight_text"
            app:srcCompat="@drawable/circle_red" />

        <ImageView
            android:id="@+id/min_weight_image"
            android:layout_width="@dimen/dp_10"
            android:layout_height="@dimen/dp_10"
            android:layout_alignTop="@+id/min_weight_text"
            android:layout_marginLeft="@dimen/dp_14"
            android:layout_marginStart="@dimen/dp_14"
            android:layout_toEndOf="@+id/weight_text"
            android:layout_toRightOf="@+id/weight_text"
            app:srcCompat="@drawable/circle_green" />

        <TextView
            android:id="@+id/min_weight_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/max_weight_text"
            android:layout_alignBottom="@+id/max_weight_text"
            android:layout_toEndOf="@+id/min_weight_image"
            android:layout_toRightOf="@+id/min_weight_image"
            android:text="@string/min_step" />

        <TextView
            android:id="@+id/max_weight_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/weight_text"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/weight_text"
            android:layout_toLeftOf="@+id/min_weight_image"
            android:layout_toStartOf="@+id/min_weight_image"
            android:text="80" />

        <TextView
            android:id="@+id/min_weight_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/min_weight_text"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@+id/min_weight_text"
            android:layout_toRightOf="@+id/min_weight_text"
            android:text="60" />
    </RelativeLayout>
   </android.support.v7.widget.CardView>
</LinearLayout>